fix(#11017): fix legacy UI styling gaps for UI extensions (#11020)

--- a/webapp/src/css/inbox.less
+++ b/webapp/src/css/inbox.less
@@ -30,6 +30,9 @@
 body {
   overflow-y: hidden;
   .app-root {
+    .tool-bar {
+      background-color: var(--accent-color, @top-header-color);
+    }
     &.messages .tool-bar {
       background-color: @messages-color;
     }
@@ -45,9 +48,6 @@ body {
     &.contacts .tool-bar {
       background-color: @contacts-color;
     }
-    &.user .tool-bar {
-      background-color: @admin-color;
-    }
     &.error .tool-bar,
     &testing .tool-bar {
       background-color: @error-color;
@@ -58,9 +58,8 @@ body {
     &.testing,
     &.user,
     &.privacy-policy,
-    &.ui-extensions {
-      .tool-bar {
-        background-color: @top-header-color;
+    &[class*="ui-extension-"] {
+      .tool-bar:not([style*="--accent-color"]).tool-bar {
 
         .ellipsis-title,
         .app-menu-button .mat-icon[fonticon="fa-bars"]:before {
@@ -69,6 +68,17 @@ body {
 
         .navigation .mat-icon-back path {
           fill: @text-inverse-color;
+        }
+      }
+      .tool-bar {
+
+        .ellipsis-title,
+        .app-menu-button .mat-icon[fonticon="fa-bars"]:before {
+          color: @tab-navbar-color;
+        }
+
+        .navigation .mat-icon-back path {
+          fill: @tab-navbar-color;
         }
       }
 
@@ -96,7 +106,7 @@ body {
     &.testing,
     &.error,
     &.privacy-policy,
-    &.ui-extensions {
+    &[class*="ui-extension-"] {
       .page {
         padding-left: calc(@tab-navbar-size + 15px);
       }
@@ -1580,7 +1590,8 @@ mm-sidebar-menu .mat-sidenav-container {
     &.about,
     &.testing,
     &.error,
-    &.privacy-policy {
+    &.privacy-policy,
+    &[class*="ui-extension-"] {
       .page {
         padding-left: 15px;
       }
